5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1671_1100.log
== SUBMITION (2019-04-28 17:05:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal: "Invalido"
print("Entrada: " + x)
print(Animal)
-- EXECUTION TIME:
0.180901
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 19
    Animal: "Invalido"
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:05:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal: "Invalido"
print("Entrada: " + x)
print(Animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Entrada: " + x)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:05:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print("Entrada: " + x)
print(Animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Entrada: " + x)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:06:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print("Entrada: ", x)
print(Animal)
-- OUTPUT:
Entrada:  100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print("Entrada:", x)
print(Animal)
-- EXECUTION TIME:
0.145185
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print("Entrada: ", x)
print(Animal)
-- EXECUTION TIME:
0.180756
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:06:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))

if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print("Entrada: ", x)
print(Animal)
-- OUTPUT:
Entrada:  100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))
print("Entrada: ", x)
if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print(Animal)
-- EXECUTION TIME:
0.197624
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:06:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))
print("Entrada: ", x)
if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print(Animal)
-- OUTPUT:
Entrada:  100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))
print("Entrada: ", x)
if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print(Animal)
-- EXECUTION TIME:
0.175501
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
insira o valor da celula: Entrada:  50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:07:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))
print("Entrada: ", x)
if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print("Animal: ", Animal)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:07:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o valor da celula: "))
print("Entrada: ", x)
if (x == 2):
	Animal = "Tartaruga"
elif (x == 5):
	Animal = "Garça"
elif (x == 10):
	Animal = "Arara"
elif (x == 20):
	Animal = "Mico-leao-dourado"
elif (x == 50):
	Animal = "Onca-pintada"
elif (x == 100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"

print("Animal: ", Animal)
-- EXECUTION TIME:
0.162974
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
